content/k8s-ingress/performance/discover/140-ns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest100
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest100.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest101
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest101.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest102
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest102.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest103
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest103.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest104
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest104.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest105
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest105.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest106
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest106.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest107
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest107.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest108
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest108.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest109
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest109.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest110
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest110.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest111
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest111.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest112
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest112.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest113
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest113.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest114
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest114.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest115
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest115.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest116
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest116.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest117
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest117.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest118
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest118.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest119
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest119.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest120
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest120.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest121
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest121.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest122
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest122.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest123
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest123.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest124
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest124.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest125
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest125.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest126
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest126.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest127
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest127.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest128
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest128.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest129
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest129.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest130
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest130.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest131
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest131.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest132
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest132.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest133
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest133.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest134
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest134.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest135
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest135.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest136
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest136.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest137
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest137.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest138
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest138.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest139
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest139.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest140
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest140.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest141
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest141.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest142
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest142.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest143
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest143.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest144
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest144.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest145
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest145.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest146
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest146.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest147
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest147.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest148
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest148.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest149
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest149.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest150
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest150.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest151
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest151.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest152
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest152.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest153
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest153.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest154
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest154.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest155
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest155.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest156
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest156.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest157
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest157.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest158
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest158.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest159
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest159.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest160
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest160.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest161
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest161.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest162
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest162.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest163
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest163.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest164
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest164.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest165
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest165.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest166
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest166.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest167
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest167.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest168
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest168.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest169
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest169.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest170
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest170.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest171
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest171.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest172
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest172.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest173
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest173.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest174
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest174.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest175
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest175.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest176
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest176.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest177
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest177.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest178
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest178.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest179
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest179.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest180
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest180.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest181
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest181.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest182
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest182.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest183
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest183.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest184
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest184.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest185
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest185.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest186
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest186.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest187
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest187.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest188
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest188.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest189
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest189.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest190
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest190.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest191
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest191.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest192
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest192.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest193
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest193.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest194
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest194.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest195
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest195.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest196
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest196.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest197
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest197.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest198
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest198.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest199
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest199.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest200
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest200.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest201
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest201.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest202
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest202.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest203
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest203.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest204
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest204.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest205
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest205.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest206
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest206.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest207
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest207.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest208
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest208.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest209
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest209.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest210
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest210.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest211
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest211.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest212
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest212.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest213
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest213.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest214
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest214.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest215
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest215.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest216
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest216.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest217
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest217.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest218
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest218.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest219
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest219.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest220
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest220.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest221
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest221.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest222
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest222.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest223
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest223.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest224
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest224.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest225
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest225.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest226
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest226.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest227
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest227.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest228
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest228.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest229
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest229.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest230
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest230.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest231
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest231.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest232
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest232.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest233
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest233.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest234
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest234.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest235
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest235.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest236
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest236.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest237
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest237.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest238
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest238.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftest239
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: perftest239.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
